1. 规范响应数据的格式。 2. 购物车的查看，修改。
