# app/Http/Controllers/Api/AuthController.php
@@ -20,6 +20,7 @@ class AuthController extends Controller
 
     /**
      * @SWG\Post(path="/api/login",tags={"Auth"},summary="提交用户手机号和密码，返回access_token",description="登录",operationId="",produces={"application/json"},
+     *   @SWG\Parameter(in="header",name="Content-Type",type="string",required=true,default="application/json"),
      *   @SWG\Parameter(in="formData",name="mobile",type="string",description="手机号",required=true),
      *   @SWG\Parameter(in="formData",name="password",type="string",description="密码",required=true),
      *   @SWG\Response(response="default", description="操作成功")
