# app/Http/Controllers/Api/UserController.php
@@ -23,6 +23,8 @@ class UserController extends Controller
 
     /**
      * @SWG\Get(path="/api/user/bindEmail", tags={"User"},summary="获得邮箱验证码",description="邮箱验证码",operationId="",produces={"application/json"},
+     *   @SWG\Parameter(in="header",name="Authorization",type="string",description="Token",required=true),
+     *   @SWG\Parameter(in="header",name="Content-Type",type="string",required=true,default="application/json"),
      *   @SWG\Parameter(in="path",name="email",type="string",description="邮箱",required=true),
      *   @SWG\Response(response="default", description="操作成功")
      * )
@@ -46,6 +48,8 @@ class UserController extends Controller
 
     /**
      * @SWG\Post(path="/api/user/bindEmail", tags={"User"},summary="绑定邮箱",description="绑定邮箱",operationId="",produces={"application/json"},
+     *   @SWG\Parameter(in="header",name="Authorization",type="string",description="Token",required=true),
+     *   @SWG\Parameter(in="header",name="Content-Type",type="string",required=true,default="application/json"),
      *   @SWG\Parameter(in="formData",name="code",type="string",description="邮箱验证码",required=true),
      *   @SWG\Parameter(in="formData",name="email",type="string",description="邮箱地址",required=true),
      *   @SWG\Parameter(in="formData",name="key",type="string",description="上一步获取邮箱验证码返回的key",required=true),
@@ -98,6 +102,7 @@ class UserController extends Controller
     /**
      * @SWG\Put(path="/api/user", tags={"User"},summary="更新用户信息",description="更新",operationId="",produces={"application/json"},
      *   @SWG\Parameter(in="header",name="Authorization",type="string",description="Token",required=true),
+     *   @SWG\Parameter(in="header",name="Content-Type",type="string",required=true,default="application/json"),
      *   @SWG\Parameter(in="formData",name="name",type="string",description="新的用户昵称",required=true),
      *   @SWG\Parameter(in="formData",name="avatar",type="number",description="用户头像",required=false),
      *   @SWG\Response(response="default", description="操作成功")
